--- a/trunk/jinbu/src/jinbu/templates/header.xhtml
+++ b/trunk/jinbu/src/jinbu/templates/header.xhtml
@@ -22,7 +22,7 @@
     <div id="Menu">
       <ul>
         <li><a href="/compra/list" class="link-MenuLeft">OFERTAS</a></li>
-        <li><a href="/cadastro/empresa/" class="link-MenuLeft">EMPRESA</a></li>
+        <li><a href="/empresa/" class="link-MenuLeft">EMPRESA</a></li>
         <li><a href="#" class="link-MenuRight">COMO FUNCIONA</a></li>
       </ul>
     </div>
