--- a/trunk/jinbu/src/jinbu/templates/cadastroEmpresa.xhtml
+++ b/trunk/jinbu/src/jinbu/templates/cadastroEmpresa.xhtml
@@ -2,10 +2,11 @@
 
 {% block content%}
 <form action="/cadastro/empresa/" method="POST">
+{% csrf_token %}
 <div id="Contener">
   <div id="boxConteudo">
   <!--Inicio da secao Cadastro Empresa-->
-  
+  {% if not loggedUser %}
   <p class="cadastroTitulo">Cadastro Empresa</p>
   
   <div class="clearFloat"></div>
@@ -13,43 +14,43 @@
   <div id="cadastroBox">
   <p class="cadastroForm-txt">Empresa</p>
   <div id="cadastroBox-Input">
-  <input name="Nome" type="text"  class="codastroInput"/>
+  <input name="username" type="text"  class="codastroInput"/>
   </div>
   
   <div class="clearFloat"></div>
   
   <p class="cadastroForm-txt">Site</p>
   <div id="cadastroBox-Input">
-  <input name="Nome" type="text"  class="codastroInput"/> 
+  <input name="site" type="text"  class="codastroInput"/> 
   </div>
 
   <div class="clearFloat"></div>
   
   <p class="cadastroForm-txt">Responsável</p>
   <div id="cadastroBox-Input">
-  <input name="Nome" type="text"  class="codastroInput"/>  
+  <input name="first_name" type="text"  class="codastroInput"/>  
   </div>  
   
   <div class="clearFloat"></div>
   
   <p class="cadastroForm-txt">E-mail</p>
   <div id="cadastroBox-Input">
-  <input name="Nome" type="text"  class="codastroInput"/>
+  <input name="email" type="text"  class="codastroInput"/>
   </div>
   
   <div class="clearFloat"></div>
   
   <p class="cadastroForm-txt">Telefone</p>
   <div id="cadastroBox-Input">
-  <input name="Nome" type="text"  class="codastroInput"/>
+  <input name="fone" type="text"  class="codastroInput"/>
   </div>
   
   <p class="cadastroForm-txt">&nbsp;</p>
   <div id="cadastroBox-BtnCadastra">
-  <input name="Cadastra" type="submit" value="Cadastra" />
+  <input name="Cadastrar" type="submit" value="Cadastra" />
   </div>  
   </div>
-  
   <div class="clearFloat"></div>
+  {% endif %}
 </form>
 {% endblock%}
