--- a/trunk/jinbu/src/jinbu/templates/navEmpresa.xhtml
+++ b/trunk/jinbu/src/jinbu/templates/navEmpresa.xhtml
@@ -8,7 +8,7 @@
   <p class="cadastroTitulo">
     <a href="/cadastro/empresa">Cadastrar Empresa</a>
     <a href="">&nbsp;&nbsp;&nbsp;ou&nbsp;&nbsp;&nbsp;</a>
-    <a href="#">Fazer Oferta</a>
+    <a href="#">Fazer Login</a>
   </p>
   <div class="clearFloat"></div>
   </div>
