--- a/trunk/jinbu/src/jinbu/templates/base.xhtml
+++ b/trunk/jinbu/src/jinbu/templates/base.xhtml
@@ -21,5 +21,9 @@
     {% include 'footer.xhtml' %}
     {% endblock%}
     </body>
+    {% block footer_scripts %}
+    {% include 'footer_scripts.xhtml' %}
+    {% endblock%}
+
 </html>
 
