--- a/jinbu/src/jinbu/templates/cadastroFisico.xhtml
+++ b/jinbu/src/jinbu/templates/cadastroFisico.xhtml
@@ -12,31 +12,30 @@
     <div id="cadastroBox">
       <p class="cadastroForm-txt">Nome</p>
       <div id="cadastroBox-Input">
-        <input name="Nome" type="text"  class="codastroInput"/>
+        <input name="first_name" type="text"  class="codastroInput"/>
         <p class="cadastroTxt-info">Deve ser entre 4 a 16 caracteres.</p>
       </div>
       <div class="clearFloat"></div>
       <p class="cadastroForm-txt">E-mail</p>
       <div id="cadastroBox-Input">
-        <input name="Nome" type="text"  class="codastroInput"/>
+        <input name="email" type="text"  class="codastroInput"/>
         <p class="cadastroTxt-info">Por favor entre com um e-mail válido.</p>
       </div>
       <div class="clearFloat"></div>
       <p class="cadastroForm-txt">Senha</p>
       <div id="cadastroBox-Input">
-        <input name="Nome" type="text"  class="codastroInput"/>
+        <input name="password" type="password"  class="codastroInput"/>
         <p class="cadastroTxt-info">Para sua segurança, forneça uma Senha com no mínimo 6 caracteres.</p>
       </div>
       <div class="clearFloat"></div>
       <p class="cadastroForm-txt">Confirm sua Senha</p>
       <div id="cadastroBox-Input">
-        <input name="Nome" type="text"  class="codastroInput"/>
+        <input name="repassword" type="password"  class="codastroInput"/>
       </div>
       <div class="clearFloat"></div>
       <p class="cadastroForm-txt">Deseja receber nossas ofertas</p>
       <div id="cadastroBox-Check">
-        <input name="okOferta" type="checkbox" value="" checked class="cadastroCheck" />
-        <p class="cadastroTxt-infoCheck">Sim</p>
+        <input name="okNews" type="checkbox" value="" checked class="cadastroCheck" />
       </div>
       
       <div class="clearFloat"></div>
