--- a/jinbu/src/jinbu/templates/scripts.xhtml
+++ b/jinbu/src/jinbu/templates/scripts.xhtml
@@ -1,3 +1,6 @@
 {%load generic %}
 
-<link href="{%CDN%}/css/jimbu_v{%BUSTER%}.css" rel="stylesheet" type="text/css" />
+<link href="{%CDN%}css/jinbu.css?{%CACHE_CSS%}" rel="stylesheet" type="text/css" />
+
+
+<script src="{%CDN%}js/jquery-1.6.2.js?{%CACHE_JS%}" type="text/javascript"></script>
